--- a/search_and_refresh.css
+++ b/search_and_refresh.css
@@ -50,9 +50,36 @@
 	transition: width 0.2s ease-in-out;
 }
 
+/* Search box styles */
+.search-box-2 {
+	width: 100px;
+	/* Set the width of the search box */
+	height: 40px;
+	/* Set the height of the search box */
+	border-radius: 42px;
+	/* Add round corners to the search box using the border-radius property */
+	border: 2px solid var(--main-dark);
+	/* Add a border to the search box */
+	outline: none;
+	/* Remove the default outline of the search box */
+	font-size: 16px;
+	/* Set the font size of the search box */
+	color: var(--main-dark);
+	/* Set the font color of the search box */
+	padding: 0px 50px;
+	/* Add some padding to the search box */
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+	/* Add a drop shadow to the search box using the box-shadow property */
+	transition: border 0.2s ease-in-out;
+	/* Add a transition to the border to animate the change */
+	transition: width 0.2s ease-in-out;
+}
+
 /* Search box focus styles */
 .search-box:focus,
-.search-box:hover {
+.search-box:hover,
+.search-box-2:focus,
+.search-box-2:hover {
 	border: 2px solid var(--main-dark);
 	width: 15rem;
 	/* Change the border color of the search box on focus */
