--- a/table.css
+++ b/table.css
@@ -79,6 +79,10 @@ th.long {
 	width: 10%;
 }
 
+th.status {
+	width: 5%;
+}
+
 th.short {
 	width: 2%;
 }
@@ -90,4 +94,118 @@ th.medium {
 /* Add a hover effect to the rows of the table */
 table tbody tr:hover {
 	background-color: #00987a4b;
+}
+
+.first-column {
+	background-color: var(--main-dark);
+	color: #ffffff;
+	font-weight: bold;
+}
+
+.abgeschlossen button {
+	background-color: var(--main-dark);
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px var(--main-dark);
+}
+
+.in-bau button {
+	background-color: var(--accent-medium);
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px var(--accent-medium);
+}
+
+.in-planung button {
+	background-color: #30bced;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px #30bced;
+}
+
+.vertrag button {
+	background-color: #fc5130;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px #fc5130;
+}
+
+.freigabe2 button {
+	background-color: #88498f;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px #88498f;
+}
+
+.freigabe1 button {
+	background-color: #202c59;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px #202c59;
+}
+
+.else button {
+	background-color: #d7d2cb;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px #d7d2cb;
+}
+
+.nso button {
+	background-color: #7371fc;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px #7371fc;
+}
+
+.irlx button {
+	background-color: #44bba4;
+	border: none;
+	text-align: center;
+	text-decoration: none;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 42px;
+	font-weight: bold;
+	box-shadow: 0px 0px 14px -2px #44bba4;
 }
