--- a/table.css
+++ b/table.css
@@ -1,12 +1,40 @@
 table {
 	border-collapse: collapse;
-	margin: 25px 0;
 	margin-bottom: var(--margin-big);
 	font-size: 0.9rem;
 	min-width: 400px;
 	width: 100%;
 	table-layout: fixed;
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+	margin: 0;
+}
+
+.table-wrapper {
+	padding: 10px;
+	padding-top: 25px;
+	margin: 0;
+}
+
+.table-scroll {
+	margin: 0;
+	overflow: auto;
+	border-bottom: 2px solid var(--main-dark);
+}
+
+.table-scroll thead {
+	position: sticky;
+	top: 0px;
+	z-index: 1;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+	background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-color: #ccc;
 }
 
 td {
@@ -38,16 +66,16 @@ tbody tr {
 	border-bottom: 1px solid #dddddd;
 }
 
+.table-scroll tbody {
+	padding-top: 40px;
+}
+
 tbody tr:nth-of-type(even) {
 	background-color: #f3f3f3;
 }
 
 tbody tr:nth-of-type(odd) {
 	background-color: white;
-}
-
-tbody tr:last-of-type {
-	border-bottom: 2px solid var(--main-dark);
 }
 
 th {
