--- a/table.css
+++ b/table.css
@@ -203,7 +203,7 @@ table tbody tr:hover {
 }
 
 .else button {
-	background-color: #d7d2cb;
+	background-color: #aba7a2;
 	border: none;
 	text-align: center;
 	text-decoration: none;
@@ -211,7 +211,7 @@ table tbody tr:hover {
 	padding: 8px 16px;
 	border-radius: 42px;
 	font-weight: bold;
-	box-shadow: 0px 0px 14px -2px #d7d2cb;
+	box-shadow: 0px 0px 14px -2px #aba7a2;
 }
 
 .nso button {
